# neural-architecture-search

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  experiment.py  pyproject.toml  requirements.txt
config/: config.yaml
config/benchmark/: nas_bench_301.yaml  nats_bench_topology.yaml
config/optimiser/: optuna.yaml  simulated_annealing.yaml
docs/: mkdocs.yml
docs/docs/: index.md
models/: .gitignore  NATS-sss-v1_0-50262-simple.dvc  NATS-tss-v1_0-3ffb9-simple.dvc  README.md  cifar100_12.parquet.dvc  cifar100_200.parquet.dvc  cifar10_12.parquet.dvc  cifar10_200.parquet.dvc  imagenet_12.parquet.dvc  imagenet_200.parquet.dvc
nas/: __init__.py
nas/algorithm/: __init__.py  optuna.py  simulated_annealing.py
nas/benchmark/: __init__.py  naslib.py  nats_bench.py
nas/experiment/: nats_optuna.py  nats_simulated_annealing.py
notebooks/: 0-tomaz-suller-nats-bench-api.ipynb  1-tomaz-suller-simulated-annealing.ipynb  1.1-tomaz.suller-neural-simulated-annealing-exploration.ipynb  1a-tomaz-suller-nats-bench-api.ipynb  1b-tomaz-suller-naslib-nasbench301.ipynb  1b-tomaz-suller-naslib-search-spaces.ipynb  2-tomaz-suller-analyse-mlflow-artifacts.ipynb  3a-tomaz-suller-analyse-mlflow-artifacts.ipynb  3a-tomaz-suller-nats-bench-best.ipynb  3b-tomaz-suller-analyse-mlflow-artifacts.ipynb  4a-tomaz-suller-analyse-mlflow-artifacts.ipynb
reports/: .gitignore  bibliography.bib  main.tex
simulated_annealing/: nats_bench.py
